--- a/manifestezcloud.plist
+++ b/manifestezcloud.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://anhnd.github.io/ezCloudHotelManager.ipa</string>
+					<string>http://anhnd.tech/ezCloudHotelManager.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
